# face-to-face-voting-web

./: .env  .env.example  .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml
backend/: .gitignore
backend/app/: pyproject.toml
backend/app/alembic/versions/: 0655c37c8555_.py  08802ebc63f8_.py  1e6d2a5e1765_.py  328663bc1b59_.py  4176bd0d2b77_.py  669cb795257e_.py  74d7f4f69470_.py  7560471b0a4d_.py  7bc4c698cf10_.py  849c82b585e7_update_events.py  92df1bd1d55a_update_events_ref.py  acf138918aba_.py  cae7a7649d52_.py  db41c0246df4_.py  db965cbde460_.py  e07ddf79599d_.py  ea8e2ea9c305_create_event_table.py
backend/app/app/: utils.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: access_logs.py  answers.py  answers_option.py  events.py  polls.py  users.py
backend/app/app/core/: security.py
backend/app/app/crud/: __init__.py  crud_access_log.py  crud_answer.py  crud_answer_option.py  crud_event.py  crud_poll.py  crud_user.py
backend/app/app/crud/.ipynb_checkpoints/: crud_event-checkpoint.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  access_log.py  answer.py  answer_option.py  event.py  poll.py  user.py
backend/app/app/models/.ipynb_checkpoints/: event-checkpoint.py
backend/app/app/schemas/: __init__.py  access_log.py  answer.py  answer_option.py  event.py  poll.py  user.py
frontend/: .env  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx-backend-not-found.conf
frontend/src/: App.css  App.js
frontend/src/api/: api.js  index.js
(+5 files in other folders)
