[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.27.0"
celery = "^5.2.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.9.0"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.1"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
sqlalchemy = "^1.4.34"
pytest = "^7.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.1.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

